name:                   notekeeper
version:                0.1.0.0
category:               Web
build-type:             Simple
cabal-version:          >=1.10

executable notekeeper
    main-is:            Main.hs
    build-depends:      base >=4.10 && <4.11
                    ,   Spock
                    ,   http-types
                    ,   text
                    ,   mtl
    hs-source-dirs:     src
    default-language:   Haskell2010